--- a/css3-clock.html
+++ b/css3-clock.html
@@ -109,27 +109,27 @@ p{
 <div id="css3-clock">
     <div class="css3-clock-number hours">
         <p class="top-bg"></p>
-        <span class="number hours-one"></span>
-        <span class="number hours-two"></span>
+        <span class="number hours-one">0</span>
+        <span class="number hours-two">0</span>
         <p class="bottom-bg"></p>
     </div>
     <div class="css3-clock-number hours-copy">
-        <span class="number hours-one"></span>
-        <span class="number hours-two"></span>
+        <span class="number hours-one">0</span>
+        <span class="number hours-two">0</span>
         <p class="bottom-bg"></p>
     </div>
     <div class="css3-clock-number minutes">
-        <span class="number minutes-one"></span>
-        <span class="number minutes-two"></span>
+        <span class="number minutes-one">0</span>
+        <span class="number minutes-two">0</span>
         <p class="bottom-bg"></p>
     </div>
     <div class="css3-clock-number minutes-copy">
-        <span class="number minutes-one"></span>
-        <span class="number minutes-two"></span>
+        <span class="number minutes-one">0</span>
+        <span class="number minutes-two">0</span>
         <p class="bottom-bg"></p>
     </div>
 </div>
-<script src="http://zeptojs.com/zepto.min.js"></script>
+<script src="https://zeptojs.com/zepto.min.js"></script>
 <script>
 $(function() {
     var date = new Date();
