--- a/css3-clock.html
+++ b/css3-clock.html
@@ -129,7 +129,7 @@ p{
         <p class="bottom-bg"></p>
     </div>
 </div>
-<script src="https://zeptojs.com/zepto.min.js"></script>
+<script src="zepto.min.js"></script>
 <script>
 $(function() {
     var date = new Date();
